--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,6 +221,7 @@ li {
 
 
 .header {
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
 
@@ -373,3 +374,8 @@ li {
 .margin-10px-between {
     margin: 10px auto;
 }
+
+
+
+
+/* end code */
